PI-2021 remove endpoints (#912)
* PI-2021 WIP

* PI-2021 WIP

* PI-2021 WIP

* PI-2021 WIP

* PI-2021

* PI-2021