@@ -4,19 +4,15 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import uk.gov.justice.digital.delius.data.api.ContactableHuman;
-import uk.gov.justice.digital.delius.data.api.ManagedOffender;
 import uk.gov.justice.digital.delius.data.api.StaffDetails;
 import uk.gov.justice.digital.delius.jpa.standard.entity.Borough;
 import uk.gov.justice.digital.delius.jpa.standard.entity.ProbationArea;
 import uk.gov.justice.digital.delius.jpa.standard.entity.Staff;
-import uk.gov.justice.digital.delius.jpa.standard.entity.Team;
 import uk.gov.justice.digital.delius.jpa.standard.repository.BoroughRepository;
-import uk.gov.justice.digital.delius.jpa.standard.repository.OffenderRepository;
 import uk.gov.justice.digital.delius.jpa.standard.repository.StaffHelperRepository;
 import uk.gov.justice.digital.delius.jpa.standard.repository.StaffRepository;
 import uk.gov.justice.digital.delius.ldap.repository.LdapRepository;
 import uk.gov.justice.digital.delius.ldap.repository.entity.NDeliusUser;
-import uk.gov.justice.digital.delius.transformers.OffenderTransformer;
 import uk.gov.justice.digital.delius.transformers.StaffTransformer;
 
 import java.util.List;
@@ -33,20 +29,11 @@ public class StaffService {
     private final StaffRepository staffRepository;
     private final LdapRepository ldapRepository;
     private final StaffHelperRepository staffHelperRepository;
-    private final OffenderRepository offenderRepository;
     private final BoroughRepository boroughRepository;
 
     @Transactional(readOnly = true)
     public Optional<Long> getStaffIdByStaffCode(final String staffCode) {
         return staffRepository.findStaffIdByOfficerCode(staffCode);
-    }
-
-    @Transactional(readOnly = true)
-    public Optional<List<ManagedOffender>> getManagedOffendersByStaffIdentifier(final long staffIdentifier, final boolean current) {
-
-        return staffRepository.findByStaffId(staffIdentifier).map(
-            staff -> OffenderTransformer.managedOffenderOf(staff, current)
-        );
     }
 
     @Transactional(readOnly = true)
@@ -79,7 +66,7 @@ public class StaffService {
             .stream()
             .map(StaffTransformer::staffDetailsOf)
             .map(addFieldsFromLdap())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional(readOnly = true)
@@ -88,18 +75,13 @@ public class StaffService {
             .stream()
             .map(StaffTransformer::staffDetailsOf)
             .map(addFieldsFromLdap())
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
     public Staff findOrCreateStaffInArea(final ContactableHuman staff, final ProbationArea probationArea) {
         return staffRepository.findFirstBySurnameIgnoreCaseAndForenameIgnoreCaseAndProbationArea(staff.getSurname(), firstNameIn(staff.getForenames()), probationArea)
             .orElseGet(() -> createStaffInArea(staff.getSurname(), firstNameIn(staff.getForenames()), probationArea));
-    }
-
-    @Transactional
-    public Optional<Staff> findByStaffId(final Long staffId) {
-        return staffRepository.findByStaffId(staffId);
     }
 
     @Transactional
@@ -117,11 +99,6 @@ public class StaffService {
         );
     }
 
-
-    Optional<Staff> findUnallocatedForTeam(final Team team) {
-        return staffRepository.findByUnallocatedByTeam(team.getTeamId());
-    }
-
     public Optional<List<StaffDetails>> getProbationDeliveryUnitHeads(String boroughCode) {
         return boroughRepository.findActiveByCode(boroughCode)
             .map(Borough::getHeadsOfProbationDeliveryUnit)
@@ -129,14 +106,6 @@ public class StaffService {
                 .map(StaffTransformer::staffDetailsOf)
                 .map(addFieldsFromLdap())
                 .toList());
-    }
-
-    private Function<StaffDetails, StaffDetails> addEmailFromLdap() {
-        return staffDetails ->
-            staffDetails
-                .toBuilder()
-                .email(ldapRepository.getEmail(staffDetails.getUsername()))
-                .build();
     }
 
     private Function<StaffDetails, StaffDetails> addFieldsFromLdap() {
