@@ -8,7 +8,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.justice.digital.delius.data.api.CommunityOrPrisonOffenderManager;
 import uk.gov.justice.digital.delius.data.api.StaffDetails;
 import uk.gov.justice.digital.delius.jpa.standard.entity.Staff;
 import uk.gov.justice.digital.delius.jpa.standard.entity.User;
@@ -24,141 +23,21 @@ import java.util.Optional;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static uk.gov.justice.digital.delius.util.EntityHelper.*;
+import static uk.gov.justice.digital.delius.util.EntityHelper.anActiveOffenderManager;
+import static uk.gov.justice.digital.delius.util.EntityHelper.anOffender;
 
 @ExtendWith(MockitoExtension.class)
 class OffenderManagerService_getAllOffenderManagersTest {
     @Mock
     private OffenderRepository offenderRepository;
     @Mock
-    private ProbationAreaRepository probationAreaRepository;
-    @Mock
-    private PrisonOffenderManagerRepository prisonOffenderManagerRepository;
-    @Mock
-    private ResponsibleOfficerRepository responsibleOfficerRepository;
-    @Mock
     private StaffService staffService;
-    @Mock
-    private TeamService teamService;
-    @Mock
-    private ReferenceDataService referenceDataService;
-    @Mock
-    private ContactService contactService;
-    @Mock
-    private TelemetryClient telemetryClient;
 
     private OffenderManagerService offenderManagerService;
 
     @BeforeEach
     void setup() {
-        offenderManagerService = new OffenderManagerService(
-                offenderRepository,
-                probationAreaRepository,
-                prisonOffenderManagerRepository,
-                responsibleOfficerRepository,
-                staffService,
-                teamService,
-                referenceDataService,
-                contactService,
-                telemetryClient);
-    }
-
-    @Nested
-    @DisplayName("getAllOffenderManagersForNomsNumber")
-    class byNomsNumber {
-
-        @Test
-        void willReturnEmptyWhenOffenderNotFound() {
-            when(offenderRepository.findByNomsNumber("G9542VP")).thenReturn(Optional.empty());
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).isNotPresent();
-        }
-
-        @Test
-        void willReturnAListWhenOffenderFound() {
-            when(offenderRepository.findByNomsNumber("G9542VP")).thenReturn(Optional.of(anOffender()));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).isPresent();
-        }
-
-        @Test
-        void willReturnAnEmptyListWhenOffenderHasNoCOMorPOMS() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(),
-                    List.of())));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).get().asList()
-                .hasSize(0);
-        }
-
-        @Test
-        void willReturnActiveCommunityOffenderManagers() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(anActiveOffenderManager()),
-                    List.of())));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).get().asList()
-                .hasSize(1);
-        }
-
-        @Test
-        void willOnlyReturnActiveCommunityOffenderManagers() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(
-                        anActiveOffenderManager("AA"),
-                        anInactiveOffenderManager("BB"),
-                        anEndDatedActiveOffenderManager("CC")
-                    ),
-                    List.of())));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).get().asList()
-                .hasSize(1).allMatch(offenderManager -> ((CommunityOrPrisonOffenderManager) offenderManager).getStaffCode().equals("AA"));
-        }
-
-        @Test
-        void willReturnActivePrisonOffenderManagers() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(),
-                    List.of(anActivePrisonOffenderManager())
-                )));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).get().asList()
-                .hasSize(1);
-        }
-
-        @Test
-        void willOnlyReturnActivePrisonOffenderManagers() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(),
-                    List.of(
-                        anActivePrisonOffenderManager("AA"),
-                        anInactivePrisonOffenderManager("BB"),
-                        anEndDatedActivePrisonOffenderManager("CC")
-                    ))));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", true)).get().asList()
-                .hasSize(1).allMatch(offenderManager -> ((CommunityOrPrisonOffenderManager) offenderManager).getStaffCode().equals("AA"));
-        }
-
-        @Test
-        void willExcludeTeamsFromProbationAreasFromPrisonOffenderManagers() {
-            when(offenderRepository.findByNomsNumber("G9542VP"))
-                .thenReturn(Optional.of(anOffender(
-                    List.of(),
-                    List.of(
-                        anActivePrisonOffenderManager("AA"),
-                        anInactivePrisonOffenderManager("BB"),
-                        anEndDatedActivePrisonOffenderManager("CC")
-                    ))));
-
-            assertThat(offenderManagerService.getAllOffenderManagersForNomsNumber("G9542VP", false)).get().asList()
-                .hasSize(1).allMatch(offMgr -> ((CommunityOrPrisonOffenderManager) offMgr).getProbationArea().getTeams() == null);
-        }
+        offenderManagerService = new OffenderManagerService(offenderRepository, staffService);
     }
 
     @Nested
@@ -207,9 +86,9 @@ class OffenderManagerService_getAllOffenderManagersTest {
 
             var offenderMgrs  = offenderManagerService.getAllOffenderManagersForCrn(CRN, true).get();
             assertThat(offenderMgrs).hasSize(1);
-            assertThat(offenderMgrs.get(0).getStaff().getEmail()).isEqualTo("no-one@nowhere.com");
-            assertThat(offenderMgrs.get(0).getStaff().getPhoneNumber()).isEqualTo("020 1111 2222");
-            assertThat(offenderMgrs.get(0).getProbationArea().getTeams()).hasSize(1);
+            assertThat(offenderMgrs.getFirst().getStaff().getEmail()).isEqualTo("no-one@nowhere.com");
+            assertThat(offenderMgrs.getFirst().getStaff().getPhoneNumber()).isEqualTo("020 1111 2222");
+            assertThat(offenderMgrs.getFirst().getProbationArea().getTeams()).hasSize(1);
 
             verify(staffService).getStaffDetailsByUsername("XX");
         }
@@ -229,7 +108,7 @@ class OffenderManagerService_getAllOffenderManagersTest {
 
             var offenderMgrs  = offenderManagerService.getAllOffenderManagersForCrn(CRN, false).get();
             assertThat(offenderMgrs).hasSize(1);
-            assertThat(offenderMgrs.get(0).getProbationArea().getTeams()).isNull();
+            assertThat(offenderMgrs.getFirst().getProbationArea().getTeams()).isNull();
 
             verify(staffService).getStaffDetailsByUsername("XX");
         }
